20180918
-------
- #37872 - Parquet files: add suport for DATE and DECIMAL types
- #37987 - Read files recursively in HDFS wrapper
- #39404 - Complete the support for Key and Value classes of Sequence and Map Wrappers
- #31056 - Explain in the manual projection with avro files
- #33125 - Create a Doc appendix explicitly explaining how to use the Hadoop vendor's own client libs
- #37754 - Add support for '\t' as separator for TAB's instead of using the TAB space as value for separator
- #39559 - Deprecate WebHDFSFileWrapper
- #38339 - Add support for S3A in the HDFS wrapper
- #37988 - Support for Azure Data Lake Store and Azure Blob files

20170307
--------
-Added - #30738 - Add support for Parquet files

20170214
--------
- #31223 - Specify custom core-site.xml and/or hdfs-site.xml in the wrapper view configuration.

20170111
--------
- #28380 - Apply fixes on Kerberos authentication mechanism.
- #28381 - Update Hadoop client libraries.

20160121
-------
- #24093 - Add support for delimited files.

20151118
--------
- #24247 - Add STOP capabilites to the HDFSFileWrapper.
- #24285 - WebHDFSFileWrapper should handle key/value pairs as HDFSDelimitedTextFileWrapper
- #24284 - Update to Hadoop 2.6.0 and Avro 1.7.7

20140808
--------
- #15683 - Add authentication artifacts for kerberized Hadoop clusters.
- #15709 - Update version of Hadoop client libraries (v2.4.0)